--- a/frontend-web/src/components/Menu/Menu.scss
+++ b/frontend-web/src/components/Menu/Menu.scss
@@ -1,4 +1,7 @@
 nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -34,6 +37,7 @@ nav {
   }
 
   nav {
+    position: relative;
     flex-direction: column;
     align-items: center;
     justify-content: center;
